@@ -3,17 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>zrlog-plugin-parent</artifactId>
-        <groupId>com.hibegin</groupId>
-        <version>4.0.0</version>
-    </parent>
-
+    <groupId>com.zrlog</groupId>
     <artifactId>plugin-qiniu</artifactId>
     <version>4.0.0</version>
 
     <properties>
-        <outputDirectory>/home/xiaochun/zrlog-plugin/</outputDirectory>
+        <outputDirectory>/Users/xiaochun/plugins/</outputDirectory>
+        <imageName>qiniu</imageName>
+        <native.maven.plugin.version>0.10.2</native.maven.plugin.version>
+        <native.image.mainClass>com.zrlog.plugin.qiniu.Application</native.image.mainClass>
+        <native.image.agentMainClass>com.zrlog.plugin.qiniu.GraalvmAgentApplication</native.image.agentMainClass>
     </properties>
 
 
@@ -26,7 +25,7 @@
         <dependency>
             <groupId>com.qiniu</groupId>
             <artifactId>qiniu-java-sdk</artifactId>
-            <version>7.1.3</version>
+            <version>7.19.0</version>
         </dependency>
     </dependencies>
 
@@ -37,12 +36,45 @@
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>**/*.properties</include>
-                    <include>**/templates/**</include>
                     <include>*.base64</include>
+                    <include>**/templates/**</include>
                 </includes>
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>java-agent</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>java</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                            <arguments>
+                                <argument>--enable-preview</argument>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>${native.image.agentMainClass}</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>native</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${project.build.directory}/${imageName}</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
@@ -54,11 +86,11 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.5.5</version>
+                <version>3.1.0</version>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.zrlog.plugin.qiniu.QiniuPluginApplication</mainClass>
+                            <mainClass>com.zrlog.plugin.qiniu.Application</mainClass>
                         </manifest>
                     </archive>
                     <finalName>qiniu</finalName>
@@ -71,5 +103,68 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native.maven.plugin.version}</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                            <execution>
+                                <id>test-native</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>test</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <fallback>false</fallback>
+                            <buildArgs>
+                                <arg>
+                                    -Ob
+                                    --enable-sbom
+                                    -H:+BuildReport
+                                    -H:+AddAllCharsets
+                                    -H:+UnlockExperimentalVMOptions
+                                    --initialize-at-build-time=UCRet
+                                    --initialize-at-build-time=sun.security.krb5.SCDynamicStoreConfig
+                                    --initialize-at-build-time=java.util.ImmutableCollections$ListN
+                                    --trace-class-initialization=sun.security.krb5.SCDynamicStoreConfig
+                                    -H:+UnlockExperimentalVMOptions
+                                    -march=compatibility --enable-preview -H:DashboardDump=${imageName}
+                                    -H:+DashboardAll -H:IncludeResources= --enable-url-protocols=http --enable-url-protocols=https --enable-monitoring=heapdump
+                                </arg>
+                            </buildArgs>
+                            <mainClass>${native.image.mainClass}</mainClass>
+                            <agent>
+                                <enabled>true</enabled>
+                            </agent>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 
 </project>
